@@ -3,3 +3,4 @@ Tech giants are rapidly integrating AI into core products, promising a new era o
 [2025-12-29] Why do programmers prefer dark mode? Because light attracts bugs.
 [2025-12-29] Cache invalidation is still undefeated.
 [2025-12-29] Why do programmers prefer dark mode? Because light attracts bugs.
+[2025-12-29] [Pun] To prove he was right, the flat-earther walked to the end of the Earth. ... He eventually came around.
